--- a/web_static/102-index.html
+++ b/web_static/102-index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AirBnB clone</title>
     <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/4-common.css">
-    <link rel="stylesheet" href="styles/3-header.css">
-    <link rel="stylesheet" href="styles/3-footer.css">
-    <link rel="stylesheet" href="styles/6-filters.css">
-    <link rel="stylesheet" href="styles/100-places.css">
+    <link rel="stylesheet" href="styles/102-common.css">
+    <link rel="stylesheet" href="styles/102-header.css">
+    <link rel="stylesheet" href="styles/102-footer.css">
+    <link rel="stylesheet" href="styles/102-filters.css">
+    <link rel="stylesheet" href="styles/102-places.css">
     <link rel="stylesheet"
           href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
           integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
@@ -55,7 +56,7 @@
         <article>
           <div class="name_and_price">
             <h2>My home</h2>
-            <div class="price_by_night">&#36;80</div>
+            <div class="price_by_night">&#36;89</div>
           </div>
 
           <div class="information">
@@ -88,7 +89,14 @@
           <div class="amenities">
             <h2>Amenities</h2>
             <ul>
-              <li><p>None</p></li>
+              <li>
+                <i class="fa fa-tv" aria-hidden="true"></i>
+                <p>Tv</p>
+              </li>
+              <li>
+                <i class="fa fa-shower" aria-hidden="true"></i>
+                <p>Shower</p>
+              </li>
             </ul>
           </div>
 
@@ -188,6 +196,87 @@
         <article>
           <div class="name_and_price">
             <h2>A suite</h2>
+            <div class="price_by_night">&#36;90</div>
+          </div>
+
+          <div class="information">
+            <div class="max_guest">
+              <i class="fa fa-users fa-3x" aria-hidden="true"></i>
+              <br>1 Guest
+            </div>
+            <div class="number_rooms">
+              <i class="fa fa-bed fa-3x" aria-hidden="true"></i>
+              <br>4 Rooms
+            </div>
+            <div class="number_bathrooms">
+              <i class="fa fa-bath fa-3x" aria-hidden="true"></i>
+              <br>1 Bathrooms
+            </div>
+          </div>
+
+          <div class="user">
+            <strong>Owner:</strong> Avocado &#38; Alpaca Spiritualist
+          </div>
+
+          <div class="description">
+            Hi there. You're reading this right now, yes? I can sense it. Now,
+            are you my soul mate? If so, I await you. Yes, you, you fellow
+            spiritualist. You, who dedicates each morning carefully tending your
+            backyard grove of avocado trees. You, who cannot spend one day away
+            from the presence of your family of 17 alpacas. You know who you
+            are. Unite with me. Unite with my spirit. I have two boiled eggs
+            waiting for you.
+          </div>
+
+          <div class="amenities">
+            <h2>Amenities</h2>
+            <ul>
+              <li>
+                <i class="fa fa-tv" aria-hidden="true"></i>
+                <p>Tv</p>
+              </li>
+              <li>
+                <i class="fa fa-heart" aria-hidden="true"></i>
+                <p>Love</p>
+              </li>
+            </ul>
+          </div>
+
+          <div class="reviews">
+            <h2>3 Reviews</h2>
+            <h3>From Michel the January 2 2018</h3>
+            <ul>
+              <li>
+                <p>
+                  My love. It is me. I'm coming.
+                </p>
+              </li>
+            </ul>
+            <h3>From Jean the March 23 2018</h3>
+            <ul>
+              <li>
+                <p>
+                  You had me at "Hi there." And then you went and said you
+                  prepared two boiled eggs.
+                </p>
+              </li>
+            </ul>
+            <h3>From Peter the May 1 2018</h3>
+            <ul>
+              <li>
+                <p>
+                  I thought I would never find you, yet here I am, fresh
+                  from tending to my avocado trees, feeling as I've never
+                  felt before in my life.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </article>
+
+        <article>
+          <div class="name_and_price">
+            <h2>Normal, Regular House</h2>
             <div class="price_by_night">&#36;190</div>
           </div>
 
