--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -2,15 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>AirBnB clone</title>
+    <title>AirBnB Clone</title>
+    <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/2-common.css">
     <link rel="stylesheet" href="styles/2-header.css">
     <link rel="stylesheet" href="styles/2-footer.css">
   </head>
+
   <body>
     <header></header>
     <footer>
-      <p>Holberton School</p>
+      Best School
     </footer>
   </body>
 </html>
